# TelegramChatBot

./: README.md
lsu-pilot/: pyproject.toml
lsu-pilot/lsu_pilot/: functions.py  main.py  questions.py
lsu-pilot/lsu_pilot/embeddings/: embed.py
lsu-pilot/lsu_pilot/fine_tuning/: open_ai_fine_tuner.py
