[tool.poetry]
name = "lsu-pilot"
version = "0.1.0"
description = ""
authors = ["Kody Buss <kody.buss@zelis.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
python-telegram-bot = "^21.6"
openai = "^1.52.0"
python-dotenv = "^1.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
